mc3s-b2x-asmo-productcatalog-main/k8s/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    app: "mc3s-b2x-aggregator-productcatalog"
  name: "mc3s-b2x-aggregator-productcatalog"
spec:
  ports:
  - name: web
    port: 2357
    targetPort: 2357
  selector:
    app: "mc3s-b2x-aggregator-productcatalog"
    name: "mc3s-b2x-aggregator-productcatalog"
