mc3s-b2x-asmo-productcatalog-main/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    external-dns.alpha.kubernetes.io/managed: 'true'
  name: mc3s-b2x-aggregator-productcatalog
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    external-dns.alpha.kubernetes.io/managed: 'true'
  name: mc3s-b2x-swagger-productcatalog
